Invisible blocks working; edited ExperimentWorld1 to update white/black